deploy: 9523e63feeadb97d40077de9d7ebea5aacf9c9bf

--- a/404.html
+++ b/404.html
@@ -6,11 +6,11 @@
 <meta name=description content>
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=https://tirefire.dev/404.html>
-<link rel=stylesheet href=https://tirefire.dev/assets/style.css>
-<link rel=stylesheet href=https://tirefire.dev/assets/blue.css>
-<link rel=apple-touch-icon href=https://tirefire.dev/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=https://tirefire.dev/favicon.ico>
+<link rel=canonical href=/404.html>
+<link rel=stylesheet href=/assets/style.css>
+<link rel=stylesheet href=/assets/blue.css>
+<link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=/favicon.ico>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content="https://tirefire.dev">
 <meta name=twitter:creator content>
@@ -18,9 +18,9 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="404 Page not found">
 <meta property="og:description" content>
-<meta property="og:url" content="https://tirefire.dev/404.html">
+<meta property="og:url" content="/404.html">
 <meta property="og:site_name" content="TireFire.dev">
-<meta property="og:image" content="https://tirefire.dev/favicon.ico">
+<meta property="og:image" content="/favicon.ico">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 </head>
@@ -41,7 +41,7 @@ TireFire.dev
 <div class=post>
 <h1 class=post-title>404 — Page not found...</h1>
 <div class=post-content>
-<a href=https://tirefire.dev/>Back to home page&nbsp;→</a>
+<a href=/>Back to home page&nbsp;→</a>
 </div>
 </div>
 </div>
@@ -53,8 +53,8 @@ TireFire.dev
 </div>
 </div>
 </footer>
-<script src=https://tirefire.dev/assets/main.js></script>
-<script src=https://tirefire.dev/assets/prism.js></script>
+<script src=/assets/main.js></script>
+<script src=/assets/prism.js></script>
 </div>
 </body>
 </html>
