--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <meta name=description content="Ramblings from Elliott">
 <meta name=keywords content>
 <meta name=robots content="noodp">
-<link rel=canonical href=https://tirefire.dev/>
-<link rel=stylesheet href=https://tirefire.dev/assets/style.css>
-<link rel=stylesheet href=https://tirefire.dev/assets/blue.css>
-<link rel=apple-touch-icon href=https://tirefire.dev/img/apple-touch-icon-192x192.png>
-<link rel="shortcut icon" href=https://tirefire.dev/favicon.ico>
+<link rel=canonical href=/>
+<link rel=stylesheet href=/assets/style.css>
+<link rel=stylesheet href=/assets/blue.css>
+<link rel=apple-touch-icon href=/img/apple-touch-icon-192x192.png>
+<link rel="shortcut icon" href=/favicon.ico>
 <meta name=twitter:card content="summary">
 <meta name=twitter:site content="https://tirefire.dev">
 <meta name=twitter:creator content="libsysguy">
@@ -19,9 +19,9 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="TireFire.dev">
 <meta property="og:description" content="Ramblings from Elliott">
-<meta property="og:url" content="https://tirefire.dev/">
+<meta property="og:url" content="/">
 <meta property="og:site_name" content="TireFire.dev">
-<meta property="og:image" content="https://tirefire.dev/favicon.ico">
+<meta property="og:image" content="/favicon.ico">
 <meta property="og:image:width" content="2048">
 <meta property="og:image:height" content="1024">
 <link href=/index.xml rel=alternate type=application/rss+xml title=TireFire.dev>
@@ -55,8 +55,8 @@ TireFire.dev
 </div>
 </div>
 </footer>
-<script src=https://tirefire.dev/assets/main.js></script>
-<script src=https://tirefire.dev/assets/prism.js></script>
+<script src=/assets/main.js></script>
+<script src=/assets/prism.js></script>
 </div>
 </body>
 </html>
