deploy: c52f0cab9e2e7a87dd0a0554cbae32874567f449

--- a/index.html
+++ b/index.html
@@ -41,6 +41,24 @@ TireFire.dev
 </header>
 <div class=content>
 <div class=posts>
+<div class="post on-list">
+<h1 class=post-title>
+<a href=/posts/hello_world/>Hello World</a>
+</h1>
+<div class=post-meta>
+<span class=post-date>
+2021-11-12
+</span>
+<span class=post-author>:: Elliott Davis</span>
+</div>
+<img src=/images/hello.gif class=post-cover alt="Hello World" title="Cover Image">
+<div class=post-content>
+My wife was remarking on how bad my current domain excellent.io is to spell when I set her up with an account for email. She has also recently started taking a C++ fundamentals class and asked how hard it would be to get a new domain that sounded more developer focused. Seeing as dumpsterfire.dev was already taken, I thought the next best word to describe tech is &ldquo;tirefire&rdquo;. Now my bank account is short $12 and I am the proud owner of tirefire.
+</div>
+<div>
+<a class="read-more button" href=/posts/hello_world/>Read more →</a>
+</div>
+</div>
 <div class=pagination>
 <div class=pagination__buttons>
 </div>
